Handle file contents as byte[] instead of string
Transfer is base64-encoded